--- a/my_portfolio/index.html
+++ b/my_portfolio/index.html
@@ -159,8 +159,8 @@
         and I’m excited to keep growing as a developer who blends innovation, problem-solving, and collaboration to make an impact.
       </p>
       <div class="about__buttons" style="margin-top: 20px;">
-        <a download="" href="AntraGupta(Resume).pdf" class="button button--flex">
-          Download CV <i class="uil uil-download-alt button__icon"></i>
+           <a href="https://drive.google.com/file/d/1pctlT_ke8TxvQA89xoUDgW7YiAp5ehj0/view?usp=drivesdk" target="_blank" class="button button--flex">
+          View Resume <i class="uil uil-download-alt button__icon"></i>
         </a>
       </div>
     </div>
